# axum-ddd-explicit-architecture

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-app.env  docker-compose.yaml  local.env  sample.env
database/: Dockerfile
database/sql/: check.sql
migrations/: down.sql  sample.sql  up.sql
runn-e2e/: README.md
runn-e2e/runbooks/: test.yml
todo-adapter/: Cargo.toml
todo-adapter/src/: lib.rs  modules.rs
todo-adapter/src/model/: todo.rs
todo-adapter/src/model/todo/: status.rs
todo-adapter/src/persistence/: postgres.rs
todo-adapter/src/repository/: health_check.rs  mod.rs  todo.rs
todo-adapter/src/repository/todo/: status.rs
todo-app/: Cargo.toml
todo-app/src/model/: mod.rs  todo.rs
todo-app/src/model/todo/: status.rs
todo-app/src/usecase/: health_check.rs  mod.rs  todo.rs
todo-driver/: Cargo.toml
todo-driver/src/context/: api_version.rs  errors.rs  mod.rs  request_helper.rs  response_helper.rs  validate.rs
todo-driver/src/model/: todo.rs
todo-driver/src/model/todo/: status.rs
todo-driver/src/module/: mod.rs
todo-driver/src/routes/: health_check.rs  todo.rs
todo-driver/src/startup/: mod.rs
todo-driver/tests/: routes_hc.rs
todo-driver/tests/shared/: mod.rs
todo-kernel/: Cargo.toml
todo-kernel/src/model/: mod.rs  todo.rs
todo-kernel/src/model/todo/: status.rs
todo-kernel/src/repository/: todo.rs
todo-kernel/src/repository/todo/: status.rs
