[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo-kernel = { path = "../todo-kernel" }
todo-adapter = { path = "../todo-adapter" }
anyhow = "1.0.58"
chrono = "0.4.22"
tokio = { version = "1.20.0", features = ["full"] }
