[package]
name = "todo-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo-kernel = { path = "../todo-kernel" }
todo-app = { path = "../todo-app" }
todo-adapter = { path = "../todo-adapter" }
anyhow = "1.0.58"
axum = "0.5.13"
dotenv = "0.15.0"
http-body = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tokio = { version = "1.20.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors"] }
thiserror = "1.0.35"
validator = { version = "0.16.0", features = ["derive"] }
