[package]
name = "todo-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.56"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
ulid = "1.1.2"
